--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -1,19 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_vertical|center_horizontal"
+    android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.lejr.lejr.RequestActivity">
-
-    <TextView
-        android:id="@+id/request_label2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Requesting From"
-        android:textSize="36sp"
-        tools:layout_editor_absoluteX="56dp"
-        tools:layout_editor_absoluteY="231dp" />
 
     <TextView
         android:id="@+id/request_label1"
@@ -36,6 +31,16 @@
         tools:layout_editor_absoluteX="102dp"
         tools:layout_editor_absoluteY="112dp" />
 
+    <TextView
+        android:id="@+id/request_label2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="48sp"
+        android:text="Requesting From"
+        android:textSize="36sp"
+        tools:layout_editor_absoluteX="56dp"
+        tools:layout_editor_absoluteY="231dp" />
+
     <EditText
         android:id="@+id/editText3"
         android:layout_width="313dp"
@@ -47,4 +52,11 @@
         android:textSize="36sp"
         tools:layout_editor_absoluteX="36dp"
         tools:layout_editor_absoluteY="287dp" />
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72sp"
+        android:text="Request" />
 </android.support.constraint.ConstraintLayout>
