Prelogin and request view changes, linearlayout format and weight additions instead of preset padding/margins.

--- a/app/src/main/res/layout/activity_prelogin.xml
+++ b/app/src/main/res/layout/activity_prelogin.xml
@@ -24,8 +24,8 @@
         android:id="@+id/bypass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="BYPASS LOGIN"
+        android:layout_marginBottom="20dp"
+        android:text="Request"
         android:onClick="bypass"/>
 
     <LinearLayout
