--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -29,13 +29,12 @@
             android:id="@+id/sending_amount"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:ems="10"
             android:hint="$0.00"
             android:inputType="numberDecimal"
             android:textSize="20sp"
-            android:textAlignment="center"
-            android:layout_weight="1"/>
+            android:textAlignment="center"/>
 
         <TextView
             android:id="@+id/req_err_1"
@@ -50,8 +49,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:orientation="vertical"
-        android:weightSum="">
+        android:orientation="vertical">
         <TextView
             android:id="@+id/request_label2"
             android:layout_width="wrap_content"
@@ -66,13 +64,12 @@
             android:id="@+id/sender_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_horizontal"
             android:ems="10"
             android:hint="Email"
             android:inputType="textEmailAddress"
             android:textAlignment="center"
-            android:textSize="20sp"
-            android:layout_weight="1"/>
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/req_err_2"
@@ -88,6 +85,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Request"
-        android:onClick="submitInformation"/>
+        android:onClick="submitInformation"
+        android:layout_marginTop="40dp"/>
 </LinearLayout>
 
