--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -19,29 +19,27 @@
             android:id="@+id/request_label1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:gravity="center"
             android:text="Requested Amount"
-            android:textSize="24sp"
+            android:textSize="20sp"
             android:layout_weight="2"/>
 
         <EditText
             android:id="@+id/sending_amount"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
+            android:layout_gravity="center_vertical"
             android:hint="$0.00"
             android:inputType="numberDecimal"
-            android:textSize="20sp"
-            android:textAlignment="center"/>
+            android:textSize="16sp"/>
 
         <TextView
             android:id="@+id/req_err_1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
     </LinearLayout>
 
 
@@ -54,38 +52,43 @@
             android:id="@+id/request_label2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
+            android:layout_gravity="center_vertical"
             android:gravity="center"
-            android:text="Requesting From"
-            android:textSize="24sp"
+            android:text="Recipient Email"
+            android:textSize="20sp"
             android:layout_weight="2"/>
 
         <EditText
             android:id="@+id/sender_email"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
+            android:layout_gravity="center_vertical"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textAlignment="center"
-            android:textSize="20sp" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/req_err_2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:textSize="18sp" />
+            android:textSize="12sp" />
     </LinearLayout>
 
-
-    <Button
-        android:id="@+id/submit_button"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Request"
-        android:onClick="submitInformation"
-        android:layout_marginTop="40dp"/>
+        android:layout_weight="3"
+        android:orientation="vertical"
+        android:gravity="center_vertical">
+        <Button
+            android:id="@+id/submit_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingHorizontal="100dp"
+            android:layout_gravity="center"
+            android:text="Request"
+            android:onClick="submitInformation" />
+    </LinearLayout>
 </LinearLayout>
 
