--- a/app/src/main/res/layout/activity_prelogin.xml
+++ b/app/src/main/res/layout/activity_prelogin.xml
@@ -22,8 +22,10 @@
 
     <Button
         android:id="@+id/bypass"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:paddingHorizontal="100dp"
         android:layout_marginBottom="20dp"
         android:text="Request"
         android:onClick="bypass"/>
