--- a/app/src/main/res/layout/activity_request.xml
+++ b/app/src/main/res/layout/activity_request.xml
@@ -89,6 +89,11 @@
             android:layout_gravity="center"
             android:text="Request"
             android:onClick="submitInformation" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test"/>
     </LinearLayout>
 </LinearLayout>
 
